# perspectiva-dado

./: Comandos_Juliano.ipynb  README.md  Untitled.ipynb  pyproject.toml
Labs/Lab0/: revisao1_Juliano_Cesar.ipynb  revisao2_Juliano_Cesar.ipynb
Projetos/Projeto 1/: compatibilidade_pc_recomendacao.docx  relatorio_recomendacao_pc.docx
Projetos/Projeto 1/01_Scripts/: scraper_kabum_pecas.ipynb
Projetos/Web Scraping/: 20260401_kabum_scraping.ipynb  20260407_kabum_scraping.ipynb  20260514_tSNE_kabum.ipynb  20264017_nlp_kabum.ipynb  introducao_pln.ipynb  kabum_scraping_v2.ipynb
Projetos/Web Scraping/data/: bow.csv  kabum_memoria_ram.csv  kabum_memoria_ram.json  kabum_memoria_ram_2026-04-16.csv  tfidf.csv
Projetos/Web Scraping/tf_idf/: .~lock.tf_idf2026-05-05.csv#  tf_idf2026-05-05.csv
