[project]
name = "perspectiva-dado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=6.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.3",
    "unidecode>=1.4.0",
]
